Created attachment 53799 [details] test file In LO version 3.3 normal view http://itmag.es/4O4F In LO version 3.4.4 invalid view http://itmag.es/4z0Re Regress.
Hello, thanks for reporting. Could you elaborate on what is exactly broken? I looked at both screenshots, but could not detect any flaw of difference...
The office version 3.4 no longer rotate at a given angle vector elements in the image In 3.3 everything was fine.
Reproduced with LOdev 3.5.0beta2 4ca392c-760cc4d-f39cf3d-1b2857e-60db978 Ubuntu 10.04.3 x86 Linux 2.6.32-37-generic Russian UI
Looks like a regression in [MS-ODRAW] support.
Created attachment 55625 [details] Same problem with MS-ODRAW with PPT file in LO Impress
It seems I've found the guilty commit: http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fbbd6134573beedc72a3839d65b27dfc829f2fb Need a partial revert, no time right now, will do it soon. P.S. The bad code design is more guilty here I think...
fixed in master (future 3.6): http://cgit.freedesktop.org/libreoffice/core/commit/?id=005d6524977bd51ce2f859b5ae5352a2fba68dd0 sent a proposal to mailing list for pushing it to 3-5 and 3-4...
*** Bug 44868 has been marked as a duplicate of this bug. ***
Cherry-picked to the libreoffice-3-5 branch (will be in RC1): http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=5854477486daafbca2a91df6a16701c358f81f6e
Thanks for repair!
Backported to the libreoffice-3-4 branch (will be in 3.4.6) http://cgit.freedesktop.org/libreoffice/filters/commit/?h=libreoffice-3-4&id=3475d300ef29866542007e295569075e592bde66
> Cherry-picked to the libreoffice-3-5 branch (will be in RC1) Still reproducible for me with 3.5RC2. LOdev 3.5.0rc2 Ubuntu 10.04.3 x86 Linux 2.6.32-37-generic Russian UI
(In reply to comment #12) > > Cherry-picked to the libreoffice-3-5 branch (will be in RC1) > Still reproducible for me with 3.5RC2. Hmmm, very strange. Are you sure that your test file was not modified?...
>Are you sure that your test file was not modified?... I am Sure. Anyway now it is ok with 3.5rc3.
Checked this on during my research for "Bug 43752 - VIEWING: Rotated flipped shapes in 3.4 drawings loose rotation opened in 3.5" again with 3.5.2, looks OK