fdo#43193: fix rotation of shapes in imported MS documents

This partially reverts commit 1fbbd6134573beedc72a3839d65b27dfc829f2fb.